[package]
name = "kfpl"
version = "1.0.0"
authors = ["Aaron Roney <twitchax>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
log = { version = "0.4.8", features = ["release_max_level_info"] }
simple_logger = "1.0.1"
yansi = "0.5.0"
lazy_static = "1.4.0"
futures = "0.3.5"
rand = "0.7.3"
serde = "1.0.111"
toml = "0.5.6"
anyhow = "1.0.32"
clap = "2.33.3"
dialoguer = "0.6.2"
async-trait = "0.1.40"
nix = "0.18.0"